--- a/Bobs-Daily.html
+++ b/Bobs-Daily.html
@@ -349,47 +349,41 @@ borders: top right bottom left !important
         </div>
       </div>
     </section>
-    <section class="u-align-center u-clearfix u-white u-section-6" id="carousel_1598">
-      <div class="u-custom-color-5 u-expanded-width u-shape u-shape-rectangle u-shape-1"></div>
+    <section class="u-align-center u-clearfix u-section-20" id="carousel_f9df">
+      <div class="u-expanded-width u-palette-5-dark-3 u-shape u-shape-rectangle u-shape-1"></div>
       <div class="u-list u-list-1">
         <div class="u-repeater u-repeater-1">
-          <div class="u-align-center u-container-style u-list-item u-repeater-item u-white u-list-item-1">
-            <div class="u-container-layout u-similar-container u-valign-top u-container-layout-1">
-              <div alt="" class="u-image u-image-circle u-image-1" data-image-width="928" data-image-height="1036"></div>
-              <h3 class="u-align-center u-text u-text-default u-text-palette-1-base u-text-1">Ivor Chu</h3>
-              <p class="u-align-center u-text u-text-default u-text-palette-1-base u-text-2"> Co-Founder / Technical Manager</p>
-              <p class="u-align-center u-text u-text-3"> I’m the co-founder and technical manager for this project. After getting into cryptocurrency, I realized how surprisingly interesting the knowledge behind it is. I think it is time to make a change.</p>
-              <div class="u-social-icons u-spacing-10 u-social-icons-1">
-                <a class="u-social-url" target="_blank" href="https://www.instagram.com/ivorchu/" title="instagram"><span class="u-icon u-icon-circle u-social-icon u-social-instagram u-text-palette-1-base u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-a0a0"></use></svg><svg x="0px" y="0px" viewBox="0 0 112 112" id="svg-a0a0" class="u-svg-content"><path d="M55.9,32.9c-12.8,0-23.2,10.4-23.2,23.2s10.4,23.2,23.2,23.2s23.2-10.4,23.2-23.2S68.7,32.9,55.9,32.9z M55.9,69.4c-7.4,0-13.3-6-13.3-13.3c-0.1-7.4,6-13.3,13.3-13.3s13.3,6,13.3,13.3C69.3,63.5,63.3,69.4,55.9,69.4z"></path><path d="M79.7,26.8c-3,0-5.4,2.5-5.4,5.4s2.5,5.4,5.4,5.4c3,0,5.4-2.5,5.4-5.4S82.7,26.8,79.7,26.8z"></path><path d="M78.2,11H33.5C21,11,10.8,21.3,10.8,33.7v44.7c0,12.6,10.2,22.8,22.7,22.8h44.7c12.6,0,22.7-10.2,22.7-22.7 V33.7C100.8,21.1,90.6,11,78.2,11z M91,78.4c0,7.1-5.8,12.8-12.8,12.8H33.5c-7.1,0-12.8-5.8-12.8-12.8V33.7 c0-7.1,5.8-12.8,12.8-12.8h44.7c7.1,0,12.8,5.8,12.8,12.8V78.4z"></path></svg></span>
-                </a>
-              </div>
+          <div class="u-align-center u-container-style u-grey-5 u-list-item u-repeater-item">
+            <div class="u-container-layout u-similar-container u-container-layout-1">
+              <div alt="" class="u-image u-image-circle u-image-1" data-image-width="2048" data-image-height="2048"></div>
+              <h5 class="u-text u-text-default u-text-1"> Steven Chen&nbsp;<br>
+              </h5>
+              <h6 class="u-custom-font u-text u-text-default u-text-font u-text-2"> The Founder/ Artist</h6>
+              <p class="u-text u-text-3"> I’m the founder and the artist of this project. The first time I got in touch with things about cryptocurrency was in June 2021. As I started to create my own NFT, I enjoyed it a lot and learned a lot of things.</p>
             </div>
           </div>
-          <div class="u-align-center u-container-style u-list-item u-repeater-item u-white u-list-item-2">
-            <div class="u-container-layout u-similar-container u-valign-top u-container-layout-2">
-              <div alt="" class="u-image u-image-circle u-image-2" data-image-width="1600" data-image-height="1600"></div>
-              <h3 class="u-align-center u-text u-text-default u-text-palette-1-base u-text-4">Steven Chen</h3>
-              <p class="u-align-center u-text u-text-default u-text-palette-1-base u-text-5"> Founder / Artist</p>
-              <p class="u-align-center u-text u-text-6"> I’m the founder and the artist for this project. The first time I got in touch with things about cryptocurrency was in June 2021. As I started to create my own NFT, I enjoyed it a lot and learned a lot of things.</p>
-              <div class="u-social-icons u-spacing-10 u-social-icons-2">
-                <a class="u-social-url" target="_blank" href="https://www.instagram.com/stevenchen012345/" title="instagram"><span class="u-icon u-icon-circle u-social-icon u-social-instagram u-text-palette-1-base u-icon-2"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-a0a0"></use></svg><svg x="0px" y="0px" viewBox="0 0 112 112" id="svg-a0a0" class="u-svg-content"><path d="M55.9,32.9c-12.8,0-23.2,10.4-23.2,23.2s10.4,23.2,23.2,23.2s23.2-10.4,23.2-23.2S68.7,32.9,55.9,32.9z M55.9,69.4c-7.4,0-13.3-6-13.3-13.3c-0.1-7.4,6-13.3,13.3-13.3s13.3,6,13.3,13.3C69.3,63.5,63.3,69.4,55.9,69.4z"></path><path d="M79.7,26.8c-3,0-5.4,2.5-5.4,5.4s2.5,5.4,5.4,5.4c3,0,5.4-2.5,5.4-5.4S82.7,26.8,79.7,26.8z"></path><path d="M78.2,11H33.5C21,11,10.8,21.3,10.8,33.7v44.7c0,12.6,10.2,22.8,22.7,22.8h44.7c12.6,0,22.7-10.2,22.7-22.7 V33.7C100.8,21.1,90.6,11,78.2,11z M91,78.4c0,7.1-5.8,12.8-12.8,12.8H33.5c-7.1,0-12.8-5.8-12.8-12.8V33.7 c0-7.1,5.8-12.8,12.8-12.8h44.7c7.1,0,12.8,5.8,12.8,12.8V78.4z"></path></svg></span>
-                </a>
-              </div>
+          <div class="u-align-center u-container-style u-grey-5 u-list-item u-repeater-item u-list-item-2">
+            <div class="u-container-layout u-similar-container u-container-layout-2">
+              <div alt="" class="u-image u-image-circle u-image-2" data-image-width="928" data-image-height="1036"></div>
+              <h5 class="u-text u-text-default u-text-4"> Ivor Chu</h5>
+              <h6 class="u-custom-font u-text u-text-default u-text-font u-text-5"> Co-Founder / Technical ManageR</h6>
+              <p class="u-text u-text-6"> I’m the co-founder and technical manager for this project. After getting into cryptocurrency, I realized how surprisingly interesting the knowledge behind it is. I think it is time to make a change.</p>
             </div>
           </div>
-          <div class="u-align-center u-container-style u-list-item u-repeater-item u-white u-list-item-3">
-            <div class="u-container-layout u-similar-container u-valign-top u-container-layout-3">
+          <div class="u-align-center u-container-style u-grey-5 u-list-item u-repeater-item">
+            <div class="u-container-layout u-similar-container u-container-layout-3">
               <div alt="" class="u-image u-image-circle u-image-3" data-image-width="554" data-image-height="554"></div>
-              <h3 class="u-align-center u-text u-text-default u-text-palette-1-base u-text-7">Fifi Wang</h3>
-              <p class="u-align-center u-text u-text-default u-text-palette-1-base u-text-8"> Executive Writer</p>
-              <p class="u-align-center u-text u-text-9"> Fifi Wang is a high school junior with a strong interest in English and writing. She looks forward to working on this project.<br>
-                <br>
-                <br>
-              </p>
-              <div class="u-social-icons u-spacing-10 u-social-icons-3">
-                <a class="u-social-url" target="_blank" href="https://www.instagram.com/_fang__w/" title="instagram"><span class="u-icon u-icon-circle u-social-icon u-social-instagram u-text-palette-1-base u-icon-3"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-a0a0"></use></svg><svg x="0px" y="0px" viewBox="0 0 112 112" id="svg-a0a0" class="u-svg-content"><path d="M55.9,32.9c-12.8,0-23.2,10.4-23.2,23.2s10.4,23.2,23.2,23.2s23.2-10.4,23.2-23.2S68.7,32.9,55.9,32.9z M55.9,69.4c-7.4,0-13.3-6-13.3-13.3c-0.1-7.4,6-13.3,13.3-13.3s13.3,6,13.3,13.3C69.3,63.5,63.3,69.4,55.9,69.4z"></path><path d="M79.7,26.8c-3,0-5.4,2.5-5.4,5.4s2.5,5.4,5.4,5.4c3,0,5.4-2.5,5.4-5.4S82.7,26.8,79.7,26.8z"></path><path d="M78.2,11H33.5C21,11,10.8,21.3,10.8,33.7v44.7c0,12.6,10.2,22.8,22.7,22.8h44.7c12.6,0,22.7-10.2,22.7-22.7 V33.7C100.8,21.1,90.6,11,78.2,11z M91,78.4c0,7.1-5.8,12.8-12.8,12.8H33.5c-7.1,0-12.8-5.8-12.8-12.8V33.7 c0-7.1,5.8-12.8,12.8-12.8h44.7c7.1,0,12.8,5.8,12.8,12.8V78.4z"></path></svg></span>
-                </a>
-              </div>
+              <h5 class="u-text u-text-default u-text-7"> Fifi Wang</h5>
+              <h6 class="u-custom-font u-text u-text-default u-text-font u-text-8"> Executive Writer</h6>
+              <p class="u-text u-text-9"> Fifi Wang is a high school junior with a strong interest in English and writing. She looks forward to working on this project.</p>
+            </div>
+          </div>
+          <div class="u-align-center u-container-style u-grey-5 u-list-item u-repeater-item">
+            <div class="u-container-layout u-similar-container u-container-layout-4">
+              <div alt="" class="u-image u-image-circle u-image-4" data-image-width="890" data-image-height="1156"></div>
+              <h5 class="u-text u-text-default u-text-10"> Esther Yang</h5>
+              <h6 class="u-custom-font u-text u-text-default u-text-font u-text-11"> Social Manager</h6>
+              <p class="u-text u-text-12">As an ordinary high school junior who is activated on the internet, I would like to have a deeper understanding for the future trend, while trying to participate as well.&nbsp;</p>
             </div>
           </div>
         </div>
